syntax = "proto3";

package loveguru.ai;

option go_package = "loveguru/proto/ai";

service AIService {
  rpc Chat (ChatRequest) returns (ChatResponse);
  rpc ChatStream (stream ChatMessage) returns (stream ChatMessage);
}

message ChatRequest {
  string message = 1;
  string context = 2; // relationship type, previous session id
  string session_id = 3; // optional session ID for chat context
}

message ChatResponse {
  string response = 1;
}

message ChatMessage {
  string message = 1;
  string context = 2;
}